[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/Galindo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tres_files/settings_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://slidingbutton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/buttonicons/house.png" type="Texture" id=4]
[ext_resource path="res://settings.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 135.0
margin_top = 184.0
margin_right = 565.0
margin_bottom = 716.0
custom_constants/separation = 100

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 430.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 430.0
margin_bottom = 352.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 430.0
margin_bottom = 64.0

[node name="music" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 118.0
margin_bottom = 55.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "MUSIC"

[node name="music_button" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 0.0
margin_right = 364.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 430.0
margin_bottom = 132.0

[node name="sfx" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 9.0
margin_right = 64.0
margin_bottom = 55.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "SFX"

[node name="sfx_button" parent="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 0.0
margin_right = 364.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 2

[node name="SoundHbox" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 430.0
margin_bottom = 200.0

[node name="sound" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/SoundHbox"]
margin_top = 9.0
margin_right = 121.0
margin_bottom = 55.0
size_flags_horizontal = 2
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "SOUND"

[node name="sound_button" parent="CenterContainer/VBoxContainer/VBoxContainer/SoundHbox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 0.0
margin_right = 364.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 2
size_flags_vertical = 6

[node name="ResetHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 430.0
margin_bottom = 532.0
custom_constants/separation = 50
alignment = 1

[node name="TextureButton" type="Button" parent="CenterContainer/VBoxContainer/ResetHBox"]
margin_top = 14.0
margin_right = 300.0
margin_bottom = 66.0
rect_min_size = Vector2( 300, 52 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0.0117647, 0.0117647, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Reset High Score"
flat = true

[node name="back_button" type="Button" parent="CenterContainer/VBoxContainer/ResetHBox"]
margin_left = 350.0
margin_right = 430.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="reset_popup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -213.0
margin_right = 255.0
margin_bottom = 213.0
window_title = "High Score Reset"

[node name="ColorRect" type="ColorRect" parent="reset_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )

[node name="Label" type="Label" parent="reset_popup/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -138.0
margin_right = 165.0
margin_bottom = -43.0
custom_fonts/font = ExtResource( 2 )
text = "Your High Score has been reset"
autowrap = true

[node name="ok_button" type="Button" parent="reset_popup/ColorRect"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = 19.0
margin_right = 79.0
margin_bottom = 93.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "OK"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/music_button" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2/sfx_button" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/SoundHbox/sound_button" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetHBox/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetHBox/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="reset_popup/ColorRect/ok_button" to="." method="_on_ok_button_pressed"]
